[tool.poetry]
name = "data-augmentator"
version = "0.1.0"
description = "Data augmentation on textual data based on dependency parsing"
authors = ["Attila Nagy <attila.nagy234@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.1.5"
dotmap = "^1.3.17"
networkx= "2.5.1"
matplotlib = "^3.2.2"
pyyaml = "^5.4.1"
ipython = "7.19.0"
pygraphviz = "1.7"
stanza = "1.2"
click = "7.1.2"
psutil = "^5.8.0"
fasttext = "0.9.2"
huspacy = "0.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
